--- a/preamble.tex
+++ b/preamble.tex
@@ -13,7 +13,7 @@
 \usepackage{mathrsfs}
 \usepackage[mathcal]{euscript}
 \usepackage{mathtools}
-\usepackage{wasysym}
+%\usepackage{wasysym}
 
 %clever ref package 
 %must come before following 3 sections
